--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ description: >-                        # used by seo meta and the atom feed
   Step by step guide to stay secure online.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://www.mentalcurrency.com'
+url: 'https://cbown75.github.io/mentalcurrency.com/'
 
 github:
   username: cbown75             # change to your github username
